tests/ui/type/missing-let-in-binding.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `_foo`
  --> $DIR/missing-let-in-binding.rs:4:5
   |
LL |     _foo: i32 = 4;
   |     ^^^^ use of undeclared crate or module `_foo`
   |
help: you might have meant to introduce a new binding
   |
LL |     let _foo: i32 = 4;
   |     +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
